# defi-marscredit

./: .dockerignore  .env.example  .gitignore  Anchor.toml  BRIDGE_DOUBLE_MINT_FIX.md  BRIDGE_DUPLICATE_FIX_SUMMARY.md  Dockerfile  PRODUCTION_BRIDGE_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_GRANTS_DEPLOYMENT.md  README.md  V5_ARCHITECTURE_SUMMARY.md  debug-contract.js  deployment-wallet-solana.json  next.config.ts  package-lock.json  package.json  production-config.template  production-deployment-final.json  production-deployment.json  railway.toml  tailwind.config.js  truffle-config.js
.cursor/: BRIDGE_DEPLOYMENT_GUIDE.md  PRODUCTION_BRIDGE_DEPLOYMENT.md  SECURITY_RULES.md  production-deployment-final.json
.next/: app-build-manifest.json  trace
contracts/: ENHANCED_GASLESS_GRANTS_README.md  ENHANCED_GRANTS_README.md  EmptyTest.sol  EnhancedGaslessGrant.sol  EnhancedTokenGrant.sol  LegacyEnhancedGrant.sol  MarsBridge.sol  MarsGrantPaymaster.sol  Migrations.sol  MinimalTestGrant.sol  PayableTest.sol  PaymasterEnabledGrant.sol  SimpleEnhancedGrant.sol  SimpleTestContract.sol  SimpleTokenGrant.sol  TestContract.sol  TestGenesisGrant.sol  TokenGrant.sol  UltraSimpleTest.sol
migrations/: 2_deploy_mars_bridge.js  6_deploy_production_grants.js
programs/mars-bridge/: Cargo.toml
programs/mars-bridge/src/: lib.rs
scripts/: add-grant.js  add-token-metadata.js  authorize-backend-as-paymaster.js  authorize-grant-with-paymaster.js  authorize-paymaster-with-grant.js  bidirectional-bridge-audit.js  bridge-audit.js  bridge-balance-fix.js  bridge-funding-options.js  (+89 more)
(+169 files in other folders)
